--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: madoreenu314
 github_username:  madoreenu
 
 # Build settings
-theme: minimal
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
