--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: [madoreenu314]
 github_username:  [madoreenu]
 
 # Build settings
-theme: jekyll-theme-minimal
+theme: jekyll-theme-architect
 plugins:
   - jekyll-feed
 
