--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: minima
-title: [mado's diary]
-description: [まどれーぬの日記です。]
+title: mado's diary
+description: まどれーぬの日記です。
 baseurl: "/blog"
 url: "https://madoreenu.github.io"
